Fix header z-index for smaller screens and button text colors

--- a/css/global.css
+++ b/css/global.css
@@ -24,6 +24,10 @@ a {
   color: #000;
 }
 
+button {
+  color: #000;
+}
+
 #promo-bar {
   background-color: #000;
   color: #fff;
